Fix whitespace in TV styles
git-svn-id: http://dev.geogebra.org/svn/trunk/geogebra@65314 23ce0884-8a58-47d3-bc5c-ddf1cd5b9f9e

--- a/web/src/main/resources/org/geogebra/web/resources/scss/tableview.scss
+++ b/web/src/main/resources/org/geogebra/web/resources/scss/tableview.scss
@@ -1,114 +1,115 @@
 @import 'colors';
 $emptyHeight: 212px;
 .GeoGebraFrame {
-		.tableViewParent {
-			height: 100%;
-			min-height: $emptyHeight + 56px;
-		}
+	.tableViewParent {
+		height: 100%;
+		min-height: $emptyHeight + 56px;
+	}
 
-		.emptyTablePanel {
-			width: 50%;
+	.emptyTablePanel {
+		width: 50%;
+		text-align: center;
+		position: absolute;
+		top: 50%;
+		transform: translateY(-50%) translateY(-28px);
+		color: $black-54;
+		height: $emptyHeight;
+	}
+
+	.emptyTablePanel div {
+		text-align: center;
+	}
+
+	.emptyTableImageWrap {
+		background-color: $white-5-overlay;
+		border-radius: 50%;
+		padding: 28px;
+		margin: auto;
+		margin: 16px auto;
+		width: 56px;
+		height: 56px;
+	}
+
+	.emptyTableImage {
+		opacity: .38;
+	}
+
+	.emptyTableInfo {
+		font-size: 14px;
+		line-height: 20px;
+		margin: 0 24px;
+	}
+
+	.emptyTableLabel {
+		line-height: 24px;
+		font-size: 18px;
+		font-weight: 500;
+		margin: 4px auto;
+		color: $black-87;
+	}
+
+	.main >* {
+		position: absolute !important;
+		display: inline-block;
+	}
+
+	.tvHeader {
+		th {
+			border: 0px;
+			padding: 0px;
 			text-align: center;
-			position: absolute;
-			top: 50%;
-			transform: translateY(-50%) translateY(-28px);
-			color: $black-54;
-			height: $emptyHeight;
-		}
+			padding: 0px;
+			div:FIRST-CHILD {
+				color: $black-54;
+				display: inline-flex;
+				margin: auto;
 
-		.emptyTablePanel div {
-			text-align: center;
-		}
-
-		.emptyTableImageWrap {
-			background-color: $white-5-overlay;
-			border-radius: 50%;
-			padding: 28px;
-			margin: auto;
-			margin: 16px auto;
-			width: 56px;
-			height: 56px;
-		}
-
-		.emptyTableImage {
-			opacity: .38;
-		}
-
-		.emptyTableInfo {
-			font-size: 14px;
-			line-height: 20px;
-			margin: 0 24px;
-		}
-
-		.emptyTableLabel {
-			line-height: 24px;
-			font-size: 18px;
-			font-weight: 500;
-			margin: 4px auto;
-			color: $black-87;
-		}
-
-		.main >* {
-			position: absolute !important;
-			display: inline-block;
-		}
-		
-		.tvHeader {
-			th {
-				 border: 0px;
-				 padding: 0px;
-				 text-align: center;
-				 padding: 0px;
-				 div:FIRST-CHILD {
-					color: $black-54; 
-					display: inline-flex;
-					margin: auto;	
-					.MyToggleButton {
-						margin-top: 8px;
-						padding: 0px;
-						border: 0px;
-						opacity: 0.54;
-					}			 
-				 }
-			}
-			tbody {display: none;}
-		}
-		
-		.tvTable {
-			 td:first-child {
-				padding: 0px !important;
-				border: 0px;
-			
-			}
-		
-			td {
-				div {			
-					color: $black-87;
-					text-align: center;
+				.MyToggleButton {
+					margin-top: 8px;
+					padding: 0px;
+					border: 0px;
+					opacity: 0.54;
 				}
 			}
-			
-			tbody tr:nth-child(odd) {
-				background: $tableview-row;
+		}
+
+		tbody {
+			display: none;
+		}
+	}
+
+	.tvTable {
+		td:first-child {
+			padding: 0px !important;
+			border: 0px;
+		}
+
+		td {
+			div {
+				color: $black-87;
+				text-align: center;
 			}
 		}
-	
-	
-		
-		.tvScrollPanel {
-			width: 50%;
-		}
 
-		.tvValueCell {
-			margin-left: 16px;
-			margin-right: 32px;
-			text-align:end;
+		tbody tr:nth-child(odd) {
+			background: $tableview-row;
 		}
+	}
 
-		.tvHeaderCell {
-			margin-left: 16px;
-		}
-	
+	.tvScrollPanel {
+		width: 50%;
+	}
+
+	.tvValueCell {
+		margin-left: 16px;
+		margin-right: 32px;
+		text-align: end;
+	}
+
+	.tvHeaderCell {
+		margin-left: 16px;
+	}
+
 	.tvPanel .tvScrollPanel{
 		flex-grow: 1;
 		/*overflow-x: hidden !important;*/
